--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
        
     </head>
     <body>
-        <h1>This is my Github Website!</h1>
+        <h1 style ="color:blue">This is my Github Website!</h1>
     </body>
 </html>
